<resources>
    <string name="app_name">CheckingNetWork</string>
    <string name="using">
    這是可偵測使用者裝置使用的連線模式為WIFI或是行動數據的APP應用。\n\n資訊欄位可抓取使用者裝置名稱和品牌名稱。\n\n若連線模式為WIFI時會顯示IPv4資訊。</string>
    <string name="use">操作方式</string>
    <string name="use_msg">點擊即可使用，並有點擊音效回饋</string>
    <string name="use_view">使用方法</string>
    <string name="set">描述</string>
    <string name="youDriveInformation">您的裝置資訊</string>
    <string name="checkingnetwork">CheckingNetWork</string>
    <string name="begin">開始使用</string>
    <string name="ps">使用方法</string>
    <string name="myInformation">二子四甲 1A813019 賴泰佑</string>
</resources>